# pii-scrub-stream

./: .env.example  .gitignore  AGENTS.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  msg.txt  pyproject.toml  rename_project.py  rewrite.py  rewrite_snaha.py
.cursor/rules/: authors-attribution.mdc
benchmarks/: __init__.py  run_benchmark.py
docs/: api.md  installation.md
examples/: api_client.py  basic_usage.py  batch_processing.py  sample.csv  stream_processing.py
scripts/: rewrite2.py  rewrite3.py
src/pii_scrub_stream/: __init__.py  __main__.py
src/pii_scrub_stream/cli/: __init__.py  main.py
src/pii_scrub_stream/compliance/: __init__.py  engine.py
src/pii_scrub_stream/detectors/: __init__.py  ai_detector.py  auth_tokens_detector.py  aws_detector.py  base.py  cloud_keys_detector.py  credit_card.py  credit_card_detector.py  crypto_keys_detector.py  email.py  email_detector.py  generic_api_key.py  generic_api_key_detector.py  github_token_detector.py  ip.py  ip_detector.py  jwt.py  jwt_detector.py  network_secrets_detector.py  openai_detector.py  openai_key.py  password_detector.py  phone.py  phone_detector.py  secret_detector.py  ssn.py  ssn_detector.py
src/pii_scrub_stream/risk/: __init__.py  engine.py
src/pii_scrub_stream/scrubber/: __init__.py  engine.py  redaction.py
src/redactai/engine/: __init__.py  __main__.py
src/redactai/engine/cli/: __init__.py  main.py
src/redactai/engine/compliance/: __init__.py  engine.py
src/redactai/engine/detectors/: __init__.py  ai_detector.py  auth_tokens_detector.py  aws_detector.py  base.py  cloud_keys_detector.py  credit_card_detector.py  crypto_keys_detector.py  email_detector.py  generic_api_key_detector.py  github_token_detector.py  ip_detector.py  jwt_detector.py  network_secrets_detector.py  openai_detector.py  password_detector.py  phone_detector.py  secret_detector.py  ssn_detector.py
src/redactai/engine/risk/: __init__.py  engine.py
src/redactai/engine/scrubber/: __init__.py  engine.py  redaction.py
src/redactai/gateway/: __init__.py
src/redactai/gateway/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py
src/redactai/gateway/cli/: __init__.py  main.py
src/redactai/gateway/config/: __init__.py  settings.py
src/redactai/gateway/core/: __init__.py  container.py  detector.py  exceptions.py  models.py  redaction.py  registry.py  service.py
src/redactai/gateway/docs/: README.md  architecture.md  scalability.md
src/redactai/gateway/ingestion/: __init__.py  base.py  csv_source.py  factory.py  file_source.py  json_source.py
src/redactai/gateway/observability/: __init__.py  audit.py  health.py  logging_config.py  metrics.py
src/redactai/gateway/scalability/: __init__.py  broker.py  worker.py
src/redactai/gateway/streaming/: __init__.py  processor.py  stream.py
tests/: test_cli.py  test_detectors.py  test_engine.py
tests/engine/: test_cli.py  test_detectors.py  test_engine.py
tests/gateway/: conftest.py  test_api.py  test_cli.py  test_config_container.py  test_core.py  test_ingestion.py  test_observability.py  test_processing_engine.py  test_scalability.py
